<resources>
    <string name="app_name">Last News App</string>
    <string name="image_of_the_article_or_news">image of the article or news</string>
    <string name="title">Title</string>
    <string name="retry">Retry</string>
    <string name="filter">Filter</string>
    <string name="general">General</string>
    <string name="all">All</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="you_may_want_to_cancel_or_change_your_network">You may want to cancel or change your network</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="sample_project">Last\nNews</string>
    <string name="api_error">Api error, do you want to refresh?</string>
    <string name="server_error">Server error, do you want to refresh?</string>
    <string name="network_error">Network error, please make sure the network is OK.</string>
    <string name="unknown_error">Unknown error, do you want to refresh?</string>
    <string name="yes">Yes</string>

</resources>