<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottomsheet_background">

        <ImageView
            android:id="@+id/handle"
            android:layout_width="48dp"
            android:layout_height="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_drag_handle"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"/>


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/handle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin">

            <RadioButton
                android:id="@+id/radio_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/general"
                android:tag="general"
                android:textSize="@dimen/font_16sp"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/radio_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/business"
                android:tag="business"
                android:textSize="@dimen/font_16sp"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/radio_entertainment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entertainment"
                android:tag="entertainment"
                android:textSize="@dimen/font_16sp"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/radio_health"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/health"
                android:tag="health"
                android:textSize="@dimen/font_16sp"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/radio_science"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/science"
                android:tag="science"
                android:textSize="@dimen/font_16sp"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/radio_sports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sports"
                android:tag="sports"
                android:textSize="@dimen/font_16sp"
                android:textColor="@color/black"/>

            <RadioButton
                android:id="@+id/radio_technology"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/technology"
                android:tag="technology"
                android:textSize="@dimen/font_16sp"
                android:textColor="@color/black"/>

        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>